Fixing up alignment and spacing of #files, global and h1 line-height fixes.

--- a/assets/benchmarks.less
+++ b/assets/benchmarks.less
@@ -22,6 +22,7 @@ html {
 body {
   font-family: sans-serif;
   font-size: 1em;
+  line-height: 1.5em;
 }
 
 /* Layout */
@@ -72,6 +73,7 @@ h1 {
   font-family: "Trebuchet MS";
   margin-bottom: 0.75em;
   margin-left: 5px;
+  line-height: 1.75em;
 }
 
 h2 {
@@ -164,9 +166,8 @@ ul li {
 }
 
 #files {
-  margin: 0 auto;
   margin-bottom: 1.5em;
-  padding: 20px;
+  margin-left: 5px;
 
   ul li a {
     color: #333;
@@ -219,7 +220,7 @@ ul li {
 }
 
 #post-content {
-  margin: 20px 0px;
+  margin: 20px 5px;
 }
 
 #body_box {
